WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
63271
Pass Strings as const references in NetworkResourcesData.h
https://bugs.webkit.org/show_bug.cgi?id=63271
Summary
Pass Strings as const references in NetworkResourcesData.h
Tony Chang
Reported
2011-06-23 12:20:58 PDT
Pass Strings as const references in NetworkResourcesData.h
Attachments
Patch
(2.19 KB, patch)
2011-06-23 12:21 PDT
,
Tony Chang
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Tony Chang
Comment 1
2011-06-23 12:21:26 PDT
Created
attachment 98379
[details]
Patch
WebKit Review Bot
Comment 2
2011-06-23 12:53:55 PDT
Comment on
attachment 98379
[details]
Patch Clearing flags on attachment: 98379 Committed
r89604
: <
http://trac.webkit.org/changeset/89604
>
WebKit Review Bot
Comment 3
2011-06-23 12:54:00 PDT
All reviewed patches have been landed. Closing bug.
Jessie Berlin
Comment 4
2011-06-23 14:16:08 PDT
Looks like this is causing crashes on SL WK2:
http://build.webkit.org/results/SnowLeopard%20Intel%20Release%20(WebKit2%20Tests)/r89604%20(12857)/results.html
Jessie Berlin
Comment 5
2011-06-23 14:34:27 PDT
Andreas suggested that I roll this out unless Tony shows up soon to address it.
Jessie Berlin
Comment 6
2011-06-23 14:40:07 PDT
The crash appears to have gone away, so I won't roll this patch out. I will keep an eye on that bot.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug