2011-06-23  Tony Chang  <tony@chromium.org>

Reviewed by Andreas Kling.

        Pass Strings as const references in NetworkResourcesData.h
        https://bugs.webkit.org/show_bug.cgi?id=63271

        * inspector/NetworkResourcesData.h:
        (WebCore::NetworkResourcesData::ResourceData::setFrameId):
        (WebCore::NetworkResourcesData::ResourceData::setUrl):
        (WebCore::NetworkResourcesData::ResourceData::setTextEncodingName):

Canonical link: https://commits.webkit.org/78909@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@89604 268f45cc-cd09-0410-ab3c-d52691b4dbfc